# wavs-nft

./: .env.example  .gitignore  Cargo.toml  DEMO.md  Makefile  README.md  package-lock.json  package.json  remappings.txt
.github/workflows/: e2e.yml
components/autonomous-artist/: Cargo.toml  README.md
components/autonomous-artist/src/: bindings.rs  evm.rs  image.rs  ipfs.rs  lib.rs  nft.rs  ollama.rs  trigger.rs
components/autonomous-artist/wit/: world.wit
components/simple-relay/: Cargo.toml  README.md
components/simple-relay/src/: lib.rs
frontend/: README.md  index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/abis/: WavsMinter.json  WavsNft.json
frontend/src/components/: DebugInfo.tsx  Header.tsx  HomePage.tsx  MintForm.tsx  NFTDetailPage.tsx  NFTGallery.tsx
frontend/src/contexts/: MintContext.tsx
frontend/src/utils/: addLocalNetwork.ts
script/: Deploy.s.sol  DeployNFT.s.sol  Mint.s.sol  Show.s.sol  ShowResultNFT.s.sol  Trigger.s.sol  TriggerNFT.s.sol  Update.s.sol
src/contracts/: README.md  WavsMinter.sol  WavsNft.sol
src/interfaces/: ITypes.sol  IWavsNftServiceTypes.sol
test/: WavsMinterTest.sol  WavsNftDetailedTest.sol  WavsNftTest.sol
